codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__mcp_tools_output_masks_sensitive_values.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
/mcp

🔌  MCP 工具

  • docs
    • 状态：已启用
    • 认证：Unsupported
    • 命令：docs-server
    • 环境变量：TOKEN=*****, APP_TOKEN=*****
    • Tools: list
    • Resources: (none)
    • Resource templates: (none)

  • http
    • 状态：已启用
    • 认证：Unsupported
    • URL：https://example.com/mcp
    • HTTP 头：Authorization=*****
    • Env HTTP headers: X-API-Key=API_KEY_ENV
    • Tools: ping
    • Resources: (none)
    • Resource templates: (none)
